[package]
name = "rex"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
trust-dns-client = "0.23"
trust-dns-proto = "0.23"
trust-dns-resolver = "0.23"
scraper = "0.18"
url = "2.4"
serde_json = "1"
indicatif = "0.17.11"
lopdf = "0.36.0"
pcap = "2.2.0"
regex = "1.11.1"
chrono = "0.4.41"
sysinfo = "0.30"
infer = "0.13"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"

[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",
]
